# go-links

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  server.go
handlers/: BUILD  get_index.go  get_shortcut.go  post_shortcut.go
middleware/: BUILD  middleware.go
models/: BUILD  shortcut.go
templates/: index.go.tmpl  register.go.tmpl
