bazel_dep(name = "rules_go", version = "0.56.1")
bazel_dep(name = "gazelle", version = "0.36.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/adrg/xdg",
    sum = "h1:xRnxJXne7+oWDatRhR1JLnvuccuIeCoBu2rtuLqQB78=",
    version = "v0.5.3"
)
go_deps.module(
    path = "github.com/mattn/go-sqlite3",
    sum = "h1:yOQRA0RpS5PFz/oikGwBEqvAWhWg5ufRz4ETLjwpU1Y=",
    version = "1.14.16",
)

use_repo(
    go_deps,
    "com_github_adrg_xdg",
    "com_github_mattn_go_sqlite3",
)